--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source: login.war
-    destination: /opt/apache-tomcat-9.0.93/webapps/
+    destination: /etc/tomcat/webapps/
 
 hooks:
   BeforeInstall:
